syntax = "proto3";

option csharp_namespace = "AElf.Kernel";

import "hash.proto";
import "kernel.proto";

message TransactionResult{
    Hash TransactionId = 1;
    Status status = 2;
    repeated LogEvent Logs = 3;
    bytes RetVal = 4;
}

enum Status {
    NotExisted = 0;
    Pending = 1;
    Failed = 2;
    Mined = 3;
}


message SerializeContractMetadataTemplateMap {
    map<string, SerializeFunctionMetadataTemplateMap> MetadataTemplateMapForContract = 2;
}

message SerializeFunctionMetadataTemplateMap {
    map<string, FunctionMetadataTemplate> TemplateMap = 2;
}


message FunctionMetadataTemplate {
    repeated string SerializeCallingSet = 1;
    repeated Resource SerializeLocalResourceSet = 2;
    bool TemplateContainsMetadata = 3;
}

message Resource {
    string Name = 1;
    DataAccessMode DataAccessMode  = 2;
}

message FunctionMetadata {
    repeated string SerializeCallingSet = 1;
    repeated Resource SerializeFullResourceSet = 2;
    repeated Resource SerializeLocalResourceSet = 3;
    bool ContractContainsMetadata = 4;
}

message SerializeFunctionMetadataMap {
    map<string, FunctionMetadata> MetadataMap = 1;
}

message CallingGraphEdges {
    repeated GraphEdge Edges = 1;
}

message GraphEdge {
    string Source = 1;
    string Target = 2;
}

